--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -3,7 +3,7 @@
     android:layout_height="fill_parent" >
 
     <Button
-        android:id="@+id/Button1"
+        android:id="@+id/medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -12,21 +12,21 @@
         android:onClick="instruct"/>
 
     <Button
-        android:id="@+id/Button2"
+        android:id="@+id/easy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Button1"
-        android:layout_alignLeft="@+id/Button1"
+        android:layout_above="@+id/medium"
+        android:layout_alignLeft="@+id/medium"
         android:layout_marginBottom="15dp"
         android:background="@drawable/gam"
         android:onClick="game" />
 
     <Button
-        android:id="@+id/Button3"
+        android:id="@+id/hard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Button1"
-        android:layout_below="@+id/Button1"
+        android:layout_alignLeft="@+id/medium"
+        android:layout_below="@+id/medium"
         android:layout_marginTop="15dp"
         android:background="@drawable/exit"
         android:onClick="exit" />
