--- a/res/layout/instruct.xml
+++ b/res/layout/instruct.xml
@@ -39,13 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:text="ashokg.geek@gmail.com" />
 
         <TextView
             android:id="@+id/textView5"
@@ -53,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/textView4"
             android:layout_alignParentRight="true"
-            android:text="Ashok Kumar Gujju" />
+            android:text="Kartik And Kshitiz" />
     </RelativeLayout>
 
 </LinearLayout>
